# kde-playground

./: CMakeLists.txt
akonadi/asapcat/: session.h
akonadi/libs/: xdgbasedirs_p.h
akonadi/rds/: bridgeconnection.h
akonadi/shared/: akapplication.h  akdbus.h
anipaper/: CMakeLists.txt  anipaper.cpp
boombox/: CMakeLists.txt
boombox/icons/: hisc-app-boombox.svgz
boombox/src/: CMakeLists.txt  bbcollectiontab.cpp  bbcollectiontab.h  bbdatabase.cpp  bbdatabase.h  bbfilechangejob.cpp  bbfilechangejob.h  bbfilesystemtab.cpp  bbfilesystemtab.h  bbfilterdock.cpp  bbfilterdock.h  bblistitem.h  bbmainwindow.cpp  bbmainwindow.h  bbmetadata.cpp  bbmetadata.h  bbmetainfodialog.cpp  bbmetainfodialog.h  bbmetainfodialog.ui  bbplaylistsystem.cpp  bbplaylistsystem.h  bbresultview.cpp  bbresultview.h  bbsetmodel.cpp  bbsetmodel.h  bbsettings.kcfgc  bbstreameditform.cpp  bbstreameditform.h  bbstreameditform.ui  bbstreamstab.cpp  bbstreamstab.h  boombox.desktop  boombox.kcfg  dbqueryjob.cpp  dbqueryjob.h  dbupdatejob.cpp  dbupdatejob.h  directoriespage.ui  main.cpp  mpris2player.cpp  (+3 more)
kaffeine/: CMakeLists.txt
kaffeine/dtvdaemon/: CMakeLists.txt  connection.h  dtvdaemon.h
kaffeine/icons/: CMakeLists.txt
kamera/: CMakeLists.txt
kamera/cmake/modules/: FindGphoto2.cmake
kamera/kcontrol/: CMakeLists.txt  kamera.cpp  kamera.h  kameraconfigdialog.cpp  kameraconfigdialog.h  kameradevice.cpp  kameradevice.h
kamera/kioslave/: CMakeLists.txt  kamera.cpp  kamera.h
kamoso/: CMakeLists.txt
karchivemanager/: CMakeLists.txt  karchiveapp.cpp  karchiveapp.hpp  karchiveapp.ui  karchivemanager.cpp  karchivemanager.desktop  karchivemanager.hpp  main.cpp  strmode.c
kcachegrind/: CMakeLists.txt
kdbg/: CMakeLists.txt
kdepim/: CMakeLists.txt
kdepimlibs/: CMakeLists.txt
kdesktopspy/: CMakeLists.txt  kdesktopspy.cpp
kdm/: CMakeLists.txt  kdm.cpp  kdm.service  kdmhelper.cpp  kdmhelper.h
kemu/: .kateproject  CMakeLists.txt  kemu.ui  kemumainwindow.cpp  kemumainwindow.h
kfilereplace/: CMakeLists.txt  commandengine.h  kfilereplaceview.h  report.h
kfirewall/: CMakeLists.txt
kfirewall/kcm/: CMakeLists.txt  kfirewallconfig.cpp  kfirewallconfig.ui  kfirewallhelper.cpp  kfirewallhelper.h
kfirewall/kded/: CMakeLists.txt  kded_kfirewall.cpp
kgpg/: CMakeLists.txt  Messages.sh  kgpg.cpp  kgpg.desktop  kgpg.h  kgpgwidget.ui
kgreeter/: CMakeLists.txt  kgreeter.cpp  kgreeter.ui  lightdm-kgreeter-greeter  lightdm-kgreeter-greeter.conf
kgreeter/kcm/: CMakeLists.txt  kgreeterconfig.cpp  kgreeterconfig.h  kgreeterconfig.ui
khash/: CMakeLists.txt  khash.cpp  khash.desktop  khash_checksum.desktop
khelpcenter/: CMakeLists.txt  application.cpp  application.h  docentry.cpp  fontdialog.cpp  glossary.cpp  history.cpp  history.h  htmlsearch.cpp  htmlsearchconfig.cpp  infotree.cpp  kcmhelpcenter.cpp  kcmhelpcenter.h  khc_indexbuilder.cpp  mainwindow.cpp  mainwindow.h  navigator.cpp  navigator.h  plugintraverser.h  scrollkeepertreebuilder.cpp  scrollkeepertreebuilder.h  searchengine.cpp  searchhandler.cpp  searchwidget.cpp  searchwidget.h  toc.cpp  treebuilder.cpp  view.cpp  view.h
khelpcenter/htmlsearch/: htmlsearch.cpp  htmlsearch.h  kcmhtmlsearch.cpp  kcmhtmlsearch.h  klangcombo.cpp  ktagcombobox.cpp  progressdialog.cpp  progressdialog.h
khelpcenter/plugins/Manpages/: man1.desktop  man2.desktop  man3.desktop  man4.desktop  man5.desktop  man6.desktop  man7.desktop  man8.desktop  man9.desktop  mann.desktop
khelpcenter/slave/: kio_help.cpp  main.cpp  xslt.cpp  xslt.h  xslt_help.cpp  xslt_kde.cpp  xslt_kde.h
khttpd/: CMakeLists.txt  khttpd.cpp
kimagesorter/: CMakeLists.txt  binding.h  image_loader.cpp  image_loader.h  image_sorter.cpp  image_sorter.h  kimagesorter.desktop  kimagesorterui.rc  main.cpp  main_window.cpp  main_window.h  picture_widget.cpp  picture_widget.h  settings_dialog.cpp  settings_dialog.h  sortsettings.ui
kimageviewer/: CMakeLists.txt  kimagepart.cpp  kimagepart.h  kimageui.ui  kimageviewer.desktop  kimageviewerpart.desktop  kimagewidget.cpp  kimagewidget.h  main.cpp
kman/: CMakeLists.txt  kman.desktop  kman.ui  kmanmainwindow.cpp  kmanmainwindow.h  kmanui.rc  main.cpp
kmixer/: CMakeLists.txt  kmixer.cpp  kmixer.h  kmixerwidgets.cpp  kmixerwidgets.h
knetpkg/: CMakeLists.txt  knetpkg.cpp  knetpkg.desktop  knetpkg.h  knetpkg.ui
kpowercontrol/: CMakeLists.txt  kpowercontrol.cpp  kpowercontrol.desktop  kpowercontrol.h  kpowercontrol.notifyrc  main.cpp
kprintjobs/: CMakeLists.txt  kded_kprintjobs.cpp  kded_kprintjobs.h  kprintjobs.desktop  kprintjobsimpl.cpp  kprintjobsimpl.h
ksnapshot/: CMakeLists.txt  ksnapshot.cpp  ksnapshot.h  ksnapshotwidget.ui  snapshottimer.cpp  snapshottimer.h
kupdatenotifier/: CMakeLists.txt  kupdatenotifier.cpp  kupdatenotifier.desktop  kupdatenotifier.h  main.cpp
kwrite/: CMakeLists.txt  kwrite.desktop  kwritemain.cpp  kwritemain.h
massif-visualizer/: CMakeLists.txt
plasma-wallpapers/: CMakeLists.txt
plasma-wallpapers/anipaper/: CMakeLists.txt  anipaper.h  plasma-wallpaper-anipaper.desktop
plasma-wallpapers/xwallpaper/: CMakeLists.txt  plasma-wallpaper-xwallpaper.desktop
polkit-kde-agent/: AuthDialog.cpp  CMakeLists.txt
polkit-kde-kcmodules-1/: CMakeLists.txt
polkit-kde-kcmodules-1/common/: CMakeLists.txt  PKLAEntry.h  identitywidget.cpp  identitywidget.h
polkit-kde-kcmodules-1/helper/: CMakeLists.txt  org.kde.polkitkde1.helper.service.in  polkitkde1helper.cpp
polkit-kde-kcmodules-1/helper/policy-gen/: policy-gen.cpp
polkit-kde-kcmodules-1/polkitactions/: ActionWidget.cpp  ActionWidget.h  CMakeLists.txt  PoliciesModel.cpp  PolkitActionsKCM.h  explicitauthorizationdialog.h  pkitemdelegate.h
polkit-kde-kcmodules-1/polkitconfig/: CMakeLists.txt  kcmpolkitconfig.cpp  kcmpolkitconfig.h
pykde4/: CMakeLists.txt  PyKDEConfigurationInformation.cmake
rekonq/: CMakeLists.txt  INSTALL
xwallpaper/: CMakeLists.txt  xwallpaper.cpp  xwallpaper.h
zeroconf-ioslave/: CMakeLists.txt
zeroconf-ioslave/ioslave/: CMakeLists.txt  dnssd.cpp
zeroconf-ioslave/kdedmodule/: CMakeLists.txt  dnssdwatcher.h  watcher.h
(+1651 files in other folders)
